@@ -81,7 +81,7 @@ define,    0xCAA330,	0xCCCB98,	0xCAA2F0,	"p_null_tile",					"Tile *"
 define,    0x45A35F,	0x45C56F,	0x45A3DF,	"ADDR_HOUSEBOAT_BUG_PATCH",			"byte *"
 define,    0x45A386,	0x45C596,	0x45A406,	"ADDR_HOUSEBOAT_BUG_PATCH_END",			"byte *"
 define,    0xB72888,	0xB950A8,	0xB72848,	"p_trade_net",					"Trade_Net *"
-define,    0x580540,	0x58D270,	0x5802A0,	"Trade_Net_set_unit_path",			"int (__fastcall *) (Trade_Net * this, int edx, int from_x, int from_y, int to_x, int to_y, Unit * unit, int civ_id, int flags, int * out_path_length_in_mp)"
+inlead,    0x580540,	0x58D270,	0x5802A0,	"Trade_Net_set_unit_path",			"int (__fastcall *) (Trade_Net * this, int edx, int from_x, int from_y, int to_x, int to_y, Unit * unit, int civ_id, int flags, int * out_path_length_in_mp)"
 define,    0x5B3290,	0x5C1BE0,	0x5B2FA0,	"Unit_pop_next_move_from_path",			"byte (__fastcall *) (Unit * this)"
 inlead,    0x45FED0,	0x4622A0,	0x45FF50,	"Unit_ai_move_leader",				"void (__fastcall *) (Unit * this)"
 define,    0x5B2B20,	0x5C1440,	0x5B2830,	"Unit_next_escorter_id",			"int (__fastcall *) (Unit * this, int edx, int * index, byte begin_iterating)"
@@ -297,6 +297,7 @@ repl call, 0x4A1477,	0x4A8027,	0x4A1507,	"Unit_check_king_for_defense_priority",
 repl call, 0x4A149F,	0x4A804F,	0x4A152F,	"Unit_check_king_for_defense_priority",		""
 repl call, 0x598EC5,	0x0,		0x0,		"get_local_time_for_unit_ini",			""
 repl call, 0x598AEC,	0x0,		0x0,		"get_local_time_for_unit_ini",			""
+define,	   0x581330,	0x0,		0x0,		"Trade_Net_get_direction_from_internal_map",	"int (__fastcall *) (Trade_Net * this, int edx, int x, int y, byte use_data_2_else_4)"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
