@@ -1,6 +1,7 @@
 - Can use charm flag to control PTW-like artillery targeting
 - Option to ignore king flag on defense, so kings aren't always last to defend in a stack
 - Harbor/airport city icons indicate unit effects not trade abilities
+- Fix incorrect ETAs in go-to mode when railroad movement is limited
 - Option to remove Elvis Easter egg
 - Match only complete names from config
 - Improve config read error messages
